refactor(engine): Update platform-agnostic rendering engine and plugin architecture
This major refactoring replaces the previous rendering implementation with a new, platform-agnostic engine architecture, significantly improving modularity, maintainability, and consistency across the application.

Key changes include:

- **Engine and Bridge:** A new `AndroidEngineBridge` class now serves as the central coordinator between the Android UI (GLSurfaceView) and the core rendering engine. This decouples the engine logic from the Android framework.

- **Plugin Architecture:** Platform-specific data sources like battery status, touch input, and sensors are now provided to the engine via a plugin system. This makes it easier to manage and extend data providers.

- **Centralized Uniforms:** A `PlatformBindingCatalog` provides a single source of truth for all built-in uniforms. This ensures that the engine's default bindings and the editor's preset uniform list are always in sync.

- **Structured Error Handling:** A new `EngineError` sealed interface and `EngineException` system replace the previous `ShaderError` class. This provides robust, structured error information, distinguishing between shader compilation, asset loading, and other generic errors.

- **Consistent Rendering Pipeline:** `MainActivity`, `PreviewActivity`, and `ShaderWallpaperService` now all use the `AndroidEngineBridge`, ensuring a consistent rendering implementation and behavior everywhere.

- **Improved Activity Communication:** The static `PreviewActivity.renderStatus` object has been removed. Communication of errors and thumbnails is now handled cleanly through `ActivityResultLauncher`.